@@ -28,18 +28,19 @@ if($_REQUEST['modfunc']=='update')
 								$sql = "UPDATE FOOD_SERVICE_ITEMS SET ";
 
 							$go = false;
-							foreach($columns as $column=>$value)
-								if(!empty($value) || $value=='0')
-								{
-									$sql .= $column."='".$value."',";
-									$go = true;
-								}
+
+							foreach( $columns as $column => $value )
+							{
+								$sql .= $column . "='" . $value . "',";
+
+								$go = true;
+							}
 
 							if($_REQUEST['tab_id']!='new')
 								$sql = mb_substr($sql,0,-1) . " WHERE MENU_ITEM_ID='".$id."'";
 							else
 								$sql = mb_substr($sql,0,-1) . " WHERE ITEM_ID='".$id."'";
-								
+
 							if($go)
 								DBQuery($sql);
 						}
@@ -159,7 +160,7 @@ if(empty($_REQUEST['modfunc']))
 
 		$sql = 'SELECT *,(SELECT ICON FROM FOOD_SERVICE_ITEMS WHERE ITEM_ID=fsmi.ITEM_ID) AS ICON FROM FOOD_SERVICE_MENU_ITEMS fsmi WHERE MENU_ID=\''.$_REQUEST['tab_id'].'\' ORDER BY (SELECT SORT_ORDER FROM FOOD_SERVICE_CATEGORIES WHERE CATEGORY_ID=fsmi.CATEGORY_ID),SORT_ORDER';
 		$functions = array('ITEM_ID'=>'makeSelectInput','ICON'=>'makeIcon','CATEGORY_ID'=>'makeSelectInput','DOES_COUNT'=>'makeCheckboxInput','SORT_ORDER'=>'makeTextInput');
-                                                                
+
 		$LO_columns = array('ITEM_ID'=>_('Menu Item'),'ICON'=>_('Icon'),'CATEGORY_ID'=>_('Category'),'DOES_COUNT'=>_('Include in Counts'),'SORT_ORDER'=>_('Sort Order'));
 
 		$link['add']['html'] = array('ITEM_ID'=>makeSelectInput('','ITEM_ID'),'CATEGORY_ID'=>makeSelectInput('','CATEGORY_ID'),'DOES_COUNT'=>makeCheckboxInput('','DOES_COUNT'),'SORT_ORDER'=>makeTextInput('','SORT_ORDER'));
