@@ -5,6 +5,8 @@ Changes in 2.8.27
 - Correctly get Discipline Fields based on user school & year in EmailReferral.fnc.php
 - Update Portuguese translation in locale/pt_PT.utf8/
 - Fix Food Service Students Accounts Account ID check + Translate Food Service Discount options
+- Fix Food Service User balance widget in StaffWidgets.fnc.php
+- Enable empty value when updating Food Service menu item in MenuItems.php
 
 Changes in 2.8.26
 -----------------
